# uap-os

./: .gitignore  LICENSE  README.md  requirements.txt
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/app/api/: project_router.py  router.py
backend/app/core/: config.py  settings.py  version.py
backend/app/database/: database.py  session.py
backend/app/events/: service.py
backend/app/flows/: service.py
backend/app/models/: __init__.py  automatico.py  automático.py  dashboard.py  device.py  event.py  flow.py  plugin.py  project.py  runtime.py  user.py
backend/app/modules/: .gitkeep  __init__.py
backend/app/repositories/: automation_repository.py  dashboard_repository.py  device_repository.py  driver_repository.py  event_repository.py  flow_repository.py  plugin_repository.py  project_repository.py  runtime_repository.py  user_repository.py
backend/app/runtime/: automation_base.py  automation_manager.py  command_processor.py  command_queue.py  config.py  device_base.py  device_manager.py  driver_base.py  driver_manager.py  engine.py  esp32_driver.py  event_bus.py  exceptions.py  flow_base.py  flow_manager.py  health.py  lifecycle.py  logger.py  manager.py  metrics.py  modbus_driver.py  mqtt_driver.py  plugin_base.py  plugin_manager.py  registry.py  router.py  router_health.py  router_ws.py  runtime_loader.py  scheduler.py  serial_driver.py  service_registry.py  state_manager.py  tcp_driver.py  websocket_manager.py
backend/app/schemas/: automation.py  dashboard.py  device.py  driver.py  event.py  flow.py  plugin.py  (+3 more)
(+405 files in other folders)
